beginnng to work on second section

--- a/index.html
+++ b/index.html
@@ -8,14 +8,27 @@
     <title>Go Vegan</title>
 </head>
 <body>
-    <div class="header">
-        <div class="logo">GO VEGAN</div>
-        <div class="nav-links">
-            <ul>
-                <li><a href=#">What?</a></li>
-                <li><a href="#">Why?</a></li>
-                <li><a href="#">How?</a></li>
-            </ul>
+    <div class="top-container">
+        <div class="header">
+            <div class="logo">GO VEGAN</div>
+            <div class="nav-links">
+             <ul>
+                 <li><a href=#">What?</a></li>
+                 <li><a href="#">Why?</a></li>
+                 <li><a href="#">How?</a></li>
+             </ul>
+             </div>
+        </div>
+
+        <div class="hero">
+            <div class="hero-text">
+                <h1>What is Veganism?</h1>
+                <p>Veganism has commonly been defined as "a way of living which seeks to exclude, as far as possible and practical, all forms of exploitation of, and cruelty to, animals for food, clothing, or any other purpose."  In dietary terms, it means refraining from consumption of all animal products such as meat, fish, eggs, and milk.</p>
+                <button type="button">Get Started</button>
+            </div>
+            <div class="hero-img">
+                <img src="img/go-vegan.jpg" alt="Graffiti which says to go vegan">
+            </div>
         </div>
     </div>
 </body>
