why go vegan section added, some improved styling

--- a/index.html
+++ b/index.html
@@ -31,5 +31,25 @@
             </div>
         </div>
     </div>
+
+    <div class="why-container">
+        <div class="why">
+            <h1>Why Go Vegan?</h1>
+            <div class="boxes">
+                <figure class="box">
+                    <img src="img/pig.png" alt="illustration of baby pig">
+                    <figcaption>To end unnecessary animal suffering and premature death.</figcaption>
+                </figure>
+                <figure class="box">
+                    <img src="img/earth.png" alt="illustration of planet earth">
+                    <figcaption>To reduce leading causes of deforestation and land and air pollution.</figcaption>
+                </figure>
+                <figure class="box">
+                    <img src="img/heart.png" alt="illustration of a heart">
+                    <figcaption>To improve personal health on a plant-based diet.</figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
