--- a/index.html
+++ b/index.html
@@ -51,5 +51,13 @@
             </div>
         </div>
     </div>
+
+    <div class="quote-container-back">
+        <div class="quote-container">
+            <div class="quote">“Perhaps in the back of our minds we already understand, without all the science I've discussed, that something terribly wrong is happening. Our sustenance now comes from misery. We know that if someone offers to show us a film on how our meat is produced, it will be a horror film. We perhaps know more than we care to admit, keeping it down in the dark places of our memory-- disavowed. When we eat factory-farmed meat we live, literally, on tortured flesh. Increasingly, that tortured flesh is becoming our own.”
+            </div>
+            <div class="quote-source"> - Jonathan Safran Foer, <b>Eating Animals</b></div>
+        </div>
+    </div>
 </body>
 </html>
