--- a/index.html
+++ b/index.html
@@ -59,5 +59,23 @@
             <div class="quote-source"> - Jonathan Safran Foer, <b>Eating Animals</b></div>
         </div>
     </div>
+
+    <div class="CTA-container">
+        <div class="CTA">
+            <div class="CTA-text">
+                <h2>Ready to become vegan?  It's time.</h2>
+                <p>Sign up here to get some free resources on how to become vegan.  Details on why it matters, how you can help, meeting nutritional needs, and a free week-long meal plan.</p>
+            </div>
+            <div class="CTA-button">
+                <button type="button">Get Started</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-container">
+        <div class="footer">
+            <p>Copyright Jeremiah616 for The Odin Project 2021</p>
+        </div>
+    </div>
 </body>
 </html>
